@@ -12,6 +12,7 @@ This file contains changes in REQUIRED dependencies for standard CPAN phases (co
  - perl 5.008 → 5.006
 
  [Removed / runtime requires]
+ - Dist::Zilla::Util::ConfigDumper
  - utf8
 
 1.001001 2015-01-21T16:26:20Z
