@@ -9,8 +9,11 @@ Release history for Dist-Zilla-Plugin-Bootstrap-ShareDir-Module
  - Dependencies changed since 1.001001, see misc/*.deps* for details
  - configure: ↓1
  - develop: +7 ↑4 -3 (suggests: ↑2)
- - runtime: ↓1 -1
+ - runtime: ↓1 -2
  - test: ↓2
+
+ [Internals]
+ - Remove use of ConfigDumper
 
 1.001001 2015-01-21T16:26:20Z af98f22
  [Dependencies::Stats]
